Fix layout bug in link bibliography sections

--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -3055,6 +3055,15 @@ del {
 
 
 /*************/
+/* AUX-LINKS */
+/*************/
+
+#link-bibliography-section > .list > li > p {
+	--text-alignment: left;
+}
+
+
+/*************/
 /* DROPCAPS */
 /*************/
 /*  "dropcaps"/"initials" (https://en.wikipedia.org/wiki/Initial
